#### Don't forget to change the version number in configure.ac! ####

17 Mar 2003 clc.pat - Optimize CLC - Ivan & Greg - Greg Smith
17 Mar 2003 l2m.pat - Tweaks to logical_to_main - Greg Smith
17 Mar 2003 protected.pat - Optimization for is_fetch_protected - Greg Smith
17 Mar 2003 prefixing.pat - Optimize APPLY_PREFIXING using xor - Greg Smith
14 Mar 2003 tlb1024.pat - Increase TLB size to 1024 - Greg Smith
14 Mar 2003 permode.pat - bit check for PER mode - Greg Smith
14 Mar 2003 maddr.pat - virtual address translation returns mainstor
            address - Greg Smith
11 Mar 2003 CLC performance improvement - Ivan Warren
10 Mar 2004 Changed MAXTTR in DASDLOAD.C to 50000 - Volker Bandke
08 Mar 2004 Optimised non crossing/non overlap MVCs with length
            2,4,8,12 and 16 - Ivan Warren
06 Mar 2004 RR, RRE, RRF_* macro optimalization - Bernard van der Helm
28 Feb 2004 Simplify translate_addr() parameter list - Greg Smith
28 Feb 2004 vstore/vfetch updates for boundary crosses - Greg Smith
28 Feb 2004 Fix TB (B22C) under SIE - Greg Smith
27 Feb 2004 Special I/O processing for Immediate Commands - Ivan Warren
26 Feb 2004 Set iodelay correctly for 0 value; dasdtab comments - Greg Smith
25 Feb 2004 Don't set incorrect length on printer immediate CCWs - Jay Maynard
21 Feb 2004 Added system parameter lparname - Bernard van der Helm
16 Feb 2004 clc.pat - Optimize CLC - Greg Smith
16 Feb 2004 move_chars.pat - Optimize move_chars - Greg Smith
16 Feb 2004 radr.pat - Make type RADR type U32 for 32 bit machines - Greg Smith
16 Feb 2004 sie_mode.pat - Check sie_mode bit for sie mode regs - Greg Smith
16 Feb 2004 vfethc.pat - Optimize vfetchc - Greg Smith
16 Feb 2004 execflag.pat - Remove execflag from inst calls - Greg Smith
16 Feb 2004 skp.pat - Reduce setting storage key bits - Greg Smith
16 Feb 2004 psw.pat - Revise internal psw format - Greg Smith
07 Feb 2004 Device groups descriminators for console devices - Ivan Warren