@@ -198,9 +198,11 @@ struct _ECPSVM_SASTATS
         regs->psw.pkey=_regs.psw.pkey; \
         regs->psw.progmask=_regs.psw.progmask;
 
-#define SASSIST_PROLOG( _instname ) \
+
+#define SASSIST_PROLOGX( _instname, _cput ) \
     VADR amicblok; \
     VADR vpswa; \
+    BYTE *vpswa_p; \
     REGS vpregs; \
     BYTE  micpend; \
     U32   CR6; \
@@ -239,14 +241,25 @@ struct _ECPSVM_SASTATS
         DEBUG_SASSISTX(_instname,logmsg(_("HHCEV300D : SASSIST "#_instname" Micblok @ %6.6X crosses page frame\n"),amicblok)); \
         return(1); \
     } \
-    amicblok=LOGICAL_TO_ABS(amicblok,USE_REAL_ADDR,regs,ACCTYPE_READ,0); \
     /* Load the micblok copy */ \
-    FETCH_FW(micblok.MICRSEG,regs->mainstor+amicblok); \
-    FETCH_FW(micblok.MICCREG,regs->mainstor+amicblok+4); \
-    FETCH_FW(micblok.MICVPSW,regs->mainstor+amicblok+8); \
-    FETCH_FW(micblok.MICWORK,regs->mainstor+amicblok+12); \
-    FETCH_FW(micblok.MICVTMR,regs->mainstor+amicblok+16); \
-    FETCH_FW(micblok.MICACF,regs->mainstor+amicblok+20); \
+    if((_cput)) \
+    { \
+	    micblok.MICRSEG=EVM_L(amicblok); \
+	    micblok.MICCREG=EVM_L(amicblok+4); \
+	    micblok.MICVPSW=EVM_L(amicblok+8); \
+	    micblok.MICWORK=EVM_L(amicblok+12); \
+	    micblok.MICVTMR=EVM_L(amicblok+16); \
+	    micblok.MICACF=EVM_L(amicblok+20); \
+    } \
+    else \
+    { \
+	    FETCH_FW(micblok.MICRSEG,regs->mainstor+amicblok); \
+	    FETCH_FW(micblok.MICCREG,regs->mainstor+amicblok+4); \
+	    FETCH_FW(micblok.MICVPSW,regs->mainstor+amicblok+8); \
+	    FETCH_FW(micblok.MICWORK,regs->mainstor+amicblok+12); \
+	    FETCH_FW(micblok.MICVTMR,regs->mainstor+amicblok+16); \
+	    FETCH_FW(micblok.MICACF,regs->mainstor+amicblok+20); \
+    } \
     micpend=(micblok.MICVPSW >> 24); \
     vpswa=micblok.MICVPSW & ADDRESS_MAXWRAP(regs); \
     micevma=(micblok.MICACF >> 24); \
@@ -254,16 +267,29 @@ struct _ECPSVM_SASTATS
     micevma3=((micblok.MICACF & 0x0000ff00) >> 8); \
     micevma4=(micblok.MICACF  & 0x000000ff); \
     /* Set ref bit on page where Virtual PSW is stored */ \
-    vpswa=LOGICAL_TO_ABS(vpswa,USE_REAL_ADDR,regs,ACCTYPE_READ,0); \
-    /* Load the Virtual PSW in a temporary REGS structure */ \
-    INITSIESTATE(vpregs); \
-    ARCH_DEP(load_psw) (&vpregs,&regs->mainstor[vpswa]); \
+    if((_cput)) \
+    { \
+    	vpswa_p=MADDR(vpswa,USE_REAL_ADDR,regs,ACCTYPE_READ,0); \
+    } \
+    DEBUG_SASSISTX(_instname,logmsg(_("HHCEV300D : SASSIST "#_instname" VPSWA= %8.8X Virtual "),vpswa)); \
     DEBUG_SASSISTX(_instname,logmsg(_("HHCEV300D : SASSIST "#_instname" CR6= %8.8X\n"),CR6)); \
     DEBUG_SASSISTX(_instname,logmsg(_("HHCEV300D : SASSIST "#_instname" MICVTMR= %8.8X\n"),micblok.MICVTMR)); \
-    DEBUG_SASSISTX(_instname,logmsg(_("HHCEV300D : SASSIST "#_instname" VPSWA= %8.8X Virtual "),vpswa)); \
-    DEBUG_SASSISTX(_instname,display_psw(&vpregs)); \
     DEBUG_SASSISTX(_instname,logmsg(_("HHCEV300D : SASSIST "#_instname" Real "))); \
-    DEBUG_SASSISTX(_instname,display_psw(regs));
+    DEBUG_SASSISTX(_instname,display_psw(regs)); \
+    if((_cput)) \
+    { \
+    	/* Load the Virtual PSW in a temporary REGS structure */ \
+	    INITSIESTATE(vpregs); \
+	    ARCH_DEP(load_psw) (&vpregs,vpswa_p); \
+	    DEBUG_SASSISTX(_instname,display_psw(&vpregs)); \
+    } \
+
+
+#define SASSIST_PROLOG( _instname ) \
+	SASSIST_PROLOGX(_instname,1)
+
+#define SASSIST_PROLOG_VT( _instname ) \
+	SASSIST_PROLOGX(_instname,0)
 
 #define ECPSVM_PROLOG(_inst) \
 int     b1, b2; \
@@ -619,6 +645,7 @@ int ecpsvm_do_disp2(REGS *regs,VADR dl,VADR el)
     U32 F_VMIOINT,F_VMPXINT;
     U32 F_VMVCR0;
     U32 NCR0,NCR1;
+    BYTE *work_p;
 
     vmb=regs->GR_L(11);
     DEBUG_CPASSISTX(DISP2,logmsg("DISP2 Data list=%6.6X VM=%6.6X\n",dl,vmb));
@@ -819,7 +846,8 @@ int ecpsvm_do_disp2(REGS *regs,VADR dl,VADR el)
 
         memset(&wregs,0,sizeof(wregs));
         INITSIESTATE(wregs);
-        ARCH_DEP(load_psw) (&wregs,regs->mainstor+vmb+VMPSW);    /* Load user's Virtual PSW in work structure */
+	work_p=MADDR(vmb+VMPSW,0,regs,USE_REAL_ADDR,0);
+        ARCH_DEP(load_psw) (&wregs,work_p);    /* Load user's Virtual PSW in work structure */
         /* Clear ILC from Virtual PSW */
         wregs.psw.ilc=0;
 
@@ -1023,7 +1051,8 @@ int ecpsvm_do_disp2(REGS *regs,VADR dl,VADR el)
         EVM_STC(B_VMESTAT,vmb+VMESTAT);
         EVM_STC(B_VMPSTAT,vmb+VMPSTAT);
         EVM_STC(B_VMOSTAT,vmb+VMOSTAT);
-        ARCH_DEP(store_psw) (&wregs,regs->mainstor+vmb+VMPSW);
+        work_p=MADDR(vmb+VMPSW,USE_REAL_ADDR,regs,ACCTYPE_WRITE,0); \
+        ARCH_DEP(store_psw) (&wregs,work_p);
 
 
         /* Stop charging current VM Block for Supervisor time */
@@ -1035,10 +1064,11 @@ int ecpsvm_do_disp2(REGS *regs,VADR dl,VADR el)
         /* Might be used by later CP Modules (including DMKPRV) */
         EVM_ST(NCR0,RUNCR0);
         EVM_ST(NCR1,RUNCR1);
-        ARCH_DEP(store_psw) (&rregs,regs->mainstor+RUNPSW);
+        work_p=MADDR(RUNPSW,USE_REAL_ADDR,regs,ACCTYPE_WRITE,0); \
+        ARCH_DEP(store_psw) (&rregs,work_p);
         DEBUG_CPASSISTX(DISP2,logmsg("DISP2 : Entry Real "));
         DEBUG_CPASSISTX(DISP2,display_psw(regs));
-        ARCH_DEP(load_psw) (regs,regs->mainstor+RUNPSW);
+        ARCH_DEP(load_psw) (regs,work_p);
         DEBUG_CPASSISTX(DISP2,logmsg("DISP2 : VMB @ %6.6X Now being dispatched\n",vmb));
         DEBUG_CPASSISTX(DISP2,logmsg("DISP2 : Real "));
         DEBUG_CPASSISTX(DISP2,display_psw(regs));
@@ -2064,7 +2094,7 @@ int     ecpsvm_check_pswtrans(REGS *regs,ECPSVM_MICBLOK *micblok, BYTE micpend, 
 int     ecpsvm_dossm(REGS *regs,int b2,VADR effective_addr2)
 {
     BYTE  reqmask;
-    RADR  cregs;
+    BYTE *cregs;
     U32   creg0;
     REGS  npregs;
 
@@ -2085,8 +2115,8 @@ int     ecpsvm_dossm(REGS *regs,int b2,VADR effective_addr2)
     }
     */
     /* Get CR0 - set ref bit on  fetched CR0 (already done in prolog for MICBLOK) */
-    cregs=LOGICAL_TO_ABS(micblok.MICCREG,USE_REAL_ADDR,regs,ACCTYPE_READ,0);
-    FETCH_FW(creg0,&regs->mainstor[cregs]);
+    cregs=MADDR(micblok.MICCREG,USE_REAL_ADDR,regs,ACCTYPE_READ,0);
+    FETCH_FW(creg0,cregs);
 
     /* Reject if V CR0 specifies SSM Suppression */
     if(creg0 & 0x40000000)
@@ -2102,7 +2132,7 @@ int     ecpsvm_dossm(REGS *regs,int b2,VADR effective_addr2)
     INITSIESTATE(npregs);
     /* Load the virtual PSW AGAIN in a new structure */
 
-    ARCH_DEP(load_psw) (&npregs,&regs->mainstor[vpswa]);
+    ARCH_DEP(load_psw) (&npregs,vpswa_p);
 
     npregs.psw.sysmask=reqmask;
 
@@ -2116,9 +2146,9 @@ int     ecpsvm_dossm(REGS *regs,int b2,VADR effective_addr2)
     npregs.psw.IA=regs->psw.IA & ADDRESS_MAXWRAP(regs);
 
     /* Set the change bit */
-    LOGICAL_TO_ABS(vpswa,USE_REAL_ADDR,regs,ACCTYPE_WRITE,0);
+    MADDR(vpswa,USE_REAL_ADDR,regs,ACCTYPE_WRITE,0);
     /* store the new PSW */
-    ARCH_DEP(store_psw) (&npregs,&regs->mainstor[vpswa]);
+    ARCH_DEP(store_psw) (&npregs,vpswa_p);
     DEBUG_SASSISTX(SSM,logmsg("HHCEV300D : SASSIST SSM Complete : new SM = %2.2X\n",reqmask));
     DEBUG_SASSISTX(LPSW,logmsg("HHCEV300D : SASSIST SSM New VIRT "));
     DEBUG_SASSISTX(LPSW,display_psw(&npregs));
@@ -2147,7 +2177,7 @@ int     ecpsvm_dosvc(REGS *regs,int svccode)
     }
     /* Get what the NEW PSW should be */
 
-    psa=(PSA_3XX *)&regs->mainstor[LOGICAL_TO_ABS((VADR)0 , USE_PRIMARY_SPACE, regs, ACCTYPE_READ, 0)];
+    psa=(PSA_3XX *)MADDR((VADR)0 , USE_PRIMARY_SPACE, regs, ACCTYPE_READ, 0);
                                                                                          /* Use all around access key 0 */
                                                                                          /* Also sets reference bit     */
     INITSIESTATE(newr);
@@ -2169,7 +2199,7 @@ int     ecpsvm_dosvc(REGS *regs,int svccode)
         return(1); /* Something in the NEW PSW we can't handle.. let CP do it */
     }
     /* Store the OLD SVC PSW */
-    psa=(PSA_3XX *)&regs->mainstor[LOGICAL_TO_ABS((VADR)0, USE_PRIMARY_SPACE, regs, ACCTYPE_WRITE, 0)];
+    psa=(PSA_3XX *)MADDR((VADR)0, USE_PRIMARY_SPACE, regs, ACCTYPE_WRITE, 0);
                                                                                          /* Use all around access key 0 */
                                                                                          /* Also sets change bit        */
     /* Set intcode in PSW (for BC mode) */
@@ -2190,7 +2220,7 @@ int     ecpsvm_dosvc(REGS *regs,int svccode)
     /*
      * Now store the new PSW in the area pointed by the MICBLOK
      */
-    ARCH_DEP(store_psw) (&newr,regs->mainstor+vpswa);
+    ARCH_DEP(store_psw) (&newr,vpswa_p);
     DEBUG_SASSISTX(SVC,logmsg("HHCEV300D : SASSIST SVC Done\n"));
     SASSIST_HIT(SVC);
     return(0);
@@ -2198,7 +2228,7 @@ int     ecpsvm_dosvc(REGS *regs,int svccode)
 /* LPSW Assist */
 int ecpsvm_dolpsw(REGS *regs,int b2,VADR e2)
 {
-    VADR nlpsw;
+    BYTE * nlpsw;
     REGS nregs;
 
     SASSIST_PROLOG(LPSW);
@@ -2220,9 +2250,9 @@ int ecpsvm_dolpsw(REGS *regs,int b2,VADR e2)
         return(1);
 
     }
-    nlpsw=LOGICAL_TO_ABS(e2,b2,regs,ACCTYPE_READ,regs->psw.pkey);
+    nlpsw=MADDR(e2,b2,regs,ACCTYPE_READ,regs->psw.pkey);
     INITSIESTATE(nregs);
-    ARCH_DEP(load_psw) (&nregs,regs->mainstor+nlpsw);
+    ARCH_DEP(load_psw) (&nregs,nlpsw);
     if(ecpsvm_check_pswtrans(regs,&micblok,micpend,&vpregs,&nregs))
     {
         DEBUG_SASSISTX(LPSW,logmsg("HHCEV300D : SASSIST LPSW Rejected - Cannot make PSW transition\n"));
@@ -2230,9 +2260,9 @@ int ecpsvm_dolpsw(REGS *regs,int b2,VADR e2)
 
     }
     SASSIST_LPSW(nregs);
-    LOGICAL_TO_ABS(vpswa,USE_REAL_ADDR,regs,ACCTYPE_WRITE,0);
+    MADDR(vpswa,USE_REAL_ADDR,regs,ACCTYPE_WRITE,0);
                         /* Set ref bit in address pointed by MICBLOK */
-    ARCH_DEP(store_psw) (&nregs,regs->mainstor+vpswa);
+    ARCH_DEP(store_psw) (&nregs,vpswa_p);
     DEBUG_SASSISTX(LPSW,logmsg("HHCEV300D : SASSIST LPSW New VIRT "));
     DEBUG_SASSISTX(LPSW,display_psw(&nregs));
     DEBUG_SASSISTX(LPSW,logmsg("HHCEV300D : SASSIST LPSW New REAL "));
@@ -2246,16 +2276,14 @@ int ecpsvm_testvtimer(REGS *regs,int td)
     U32 vtmr;
     U32 ovtmr;
     int doint=0;
-    SASSIST_PROLOG(VTIMER);
+    SASSIST_PROLOG_VT(VTIMER);
     if(!(CR6 & ECPSVM_CR6_VIRTTIMR))
     {
         DEBUG_SASSISTX(VTIMER,logmsg("HHCEV300D : SASSIST VTIMER reject : Disabled by CR6\n"));
         return(1);
     }
     /* Update the Virt timer */
-    /* Do not set ref/change bit there */
-    /* this is a hardware timer update */
-    /* ALSO ! Not subject to fetch/store protection */
+
     FETCH_FW(vtmr,regs->mainstor+micblok.MICVTMR);
     ovtmr=vtmr;
     vtmr-=td;
@@ -2348,6 +2376,7 @@ int ecpsvm_dolctl(REGS *regs,int r1,int r3,int b2,VADR effective_addr2)
     U32 crs[16];        /* New CRs */
     U32 rcrs[16];       /* REAL CRs */
     U32 ocrs[16];       /* Old CRs */
+    BYTE *ecb_p;
     VADR F_ECBLOK,vmb;
     BYTE B_VMPSTAT;
 
@@ -2362,7 +2391,7 @@ int ecpsvm_dolctl(REGS *regs,int r1,int r3,int b2,VADR effective_addr2)
     }
 
     vmb=vpswa-0xA8;
-    B_VMPSTAT=regs->mainstor[vmb+VMPSTAT];
+    B_VMPSTAT=EVM_IC(vmb+VMPSTAT);
 
     if((!(B_VMPSTAT & VMV370R)) && ((r1!=r3) || (r1!=0)))
     {
@@ -2390,25 +2419,16 @@ int ecpsvm_dolctl(REGS *regs,int r1,int r3,int b2,VADR effective_addr2)
     if(B_VMPSTAT & VMV370R)
     {
         F_ECBLOK=EVM_L(vmb+VMECEXT);
-        /* Ensure ref bit set */
-        LOGICAL_TO_ABS(F_ECBLOK,USE_REAL_ADDR,regs,ACCTYPE_READ,0);
-        if((F_ECBLOK & 0x7FF) != ((F_ECBLOK+((numcrs-1)*4)) & 0x7FF))
-        {
-            /* set ref bit in 2nd 2K Page is necessary */
-            LOGICAL_TO_ABS(F_ECBLOK+((numcrs-1)*4),USE_REAL_ADDR,regs,ACCTYPE_READ,0);
-        }
-        /* Load OLD Crs from ECBLOK */
-        for(i=0;i<16;i++)
-        {
-            FETCH_FW(ocrs[i],regs->mainstor+F_ECBLOK+(i*4));
-        }
+	for(i=0;i<16;i++)
+	{
+		ocrs[i]=EVM_L(F_ECBLOK+(i*4));
+	}
     }
     else
     {
         F_ECBLOK=vmb+VMECEXT;  /* Update ECBLOK ADDRESS for VCR0 Update */
         /* Load OLD CR0 From VMBLOK */
-        /* Note : ref bit already set in proglog */
-        FETCH_FW(ocrs[0],regs->mainstor+F_ECBLOK);
+	ocrs[0]=EVM_L(F_ECBLOK);
     }
     for(i=0;i<16;i++)
     {
@@ -2509,11 +2529,11 @@ int ecpsvm_dolctl(REGS *regs,int r1,int r3,int b2,VADR effective_addr2)
     /* Note : if F_ECBLOK addresses VMVCR0 in the VMBLOCK */
     /*        check has already been done to make sure    */
     /*        r1=0 and numcrs=1                           */
-    LOGICAL_TO_ABS(F_ECBLOK,USE_REAL_ADDR,regs,ACCTYPE_WRITE,0);
+    MADDR(F_ECBLOK,USE_REAL_ADDR,regs,ACCTYPE_WRITE,0);
     if((F_ECBLOK & 0x7FF) != ((F_ECBLOK+((numcrs-1)*4)) & 0x7FF))
     {
         /* set change bit in 2nd 2K Page is necessary */
-        LOGICAL_TO_ABS(F_ECBLOK+((numcrs-1)*4),USE_REAL_ADDR,regs,ACCTYPE_WRITE,0);
+        MADDR(F_ECBLOK+((numcrs-1)*4),USE_REAL_ADDR,regs,ACCTYPE_WRITE,0);
     }
     for(j=r1,i=0;i<numcrs;i++,j++)
     {
@@ -2521,7 +2541,7 @@ int ecpsvm_dolctl(REGS *regs,int r1,int r3,int b2,VADR effective_addr2)
         {
             j-=16;
         }
-        STORE_FW(regs->mainstor+F_ECBLOK+(j*4),ocrs[j]);
+	EVM_ST(ocrs[j],F_ECBLOK+(j*4));
     }
     DEBUG_SASSISTX(LCTL,logmsg("HHCEV300D : SASSIST LCTL %d,%d Done\n",r1,r3));
     SASSIST_HIT(LCTL);
